--- a/app/globals.css
+++ b/app/globals.css
@@ -167,3 +167,16 @@
   filter: blur(25px);
   z-index: -1;
 }
+
+@keyframes shine {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+.animate-shine {
+  animation: shine 2s infinite;
+}
